--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,15 @@ dist
 dist-ssr
 *.local
 
-# Editor directories and files
+# VS Code directories and files
 .vscode/*
+!.vscode/settings.json
 !.vscode/extensions.json
+
+# You might want to ignore these if they contain sensitive or machine-specific paths
+.vscode/launch.json
+.vscode/tasks.json
+
 .idea
 .DS_Store
 *.suo
