--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,4 +31,4 @@ jobs:
           port: ${{ secrets.SFTP_PORT }}
           protocol: ftp
           local-dir: dist
-          server-dir: public_html/
+          server-dir: ./
